--- a/src/scss/modal/_layout.scss
+++ b/src/scss/modal/_layout.scss
@@ -4,6 +4,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 99999999999999;
 	* {
 		font-family: 'MW_Lato' !important;
 	}
